--- a/src/components/Links.css
+++ b/src/components/Links.css
@@ -1,9 +1,19 @@
 #links {
   display: grid;
   grid-template-rows: 10vh 10vh 10vh 10vh 10vh;
+  justify-content: center;
+  align-content: space-around;
 }
 
-a {
+.contactLinks {
   text-decoration: none;
-  color: black;
+  color: #0d00a4;
+}
+
+.linkBox {
+  align-self: center;
+  align-content: center;
+  width: 20vw;
+  padding: 3vh 0 3vh 0;
+  background-color: #e8db7d;
 }
