--- a/src/components/PublisherList.css
+++ b/src/components/PublisherList.css
@@ -9,14 +9,13 @@
 .comicItem {
   text-decoration: none;
   border: 1px solid black;
-  align-self: center;
   margin: 25px;
-  height: 10vh;
-  align-content: center;
-  padding-top: 4vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
   background-color: #e8db7d;
 }
 
 .comicTitle {
   text-align: center;
+  color: #0d00a4;
 }
