--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   background-image: url(./assets/background.jpeg);
   background-size: cover;
   background-position: center;
+  align-items: center;
 }
 
 #title {
