--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,11 +3,9 @@
   justify-content: center;
   align-items: center;
   background-color: #e2e2e2;
+  margin-top: 30vh;
 }
 
 .introParagraph {
-  /* text-align: center; */
   width: 50vw;
-  /* padding: 25px; */
-  /* justify-content: center; */
 }
