--- a/src/components/Titles.css
+++ b/src/components/Titles.css
@@ -1,4 +1,4 @@
-.comicCard {
+.titleCard {
   background-color: #e2e2e2;
   width: 50vw;
   justify-items: center;
@@ -6,14 +6,9 @@
   padding: 15px;
 }
 
-.dayList {
+.titleContainer {
   width: 98vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.dayItems {
-  background-color: #222222;
-  color: #e2e2e2;
 }
