--- a/src/components/PublisherList.css
+++ b/src/components/PublisherList.css
@@ -12,7 +12,7 @@
   margin: 25px;
   padding-top: 5vh;
   padding-bottom: 5vh;
-  background-color: #e8db7d;
+  background-color: #60992d;
 }
 
 .comicTitle {
