--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -9,3 +9,10 @@
 .introParagraph {
   width: 50vw;
 }
+
+@media (max-width: 767px) {
+  .intro {
+    font-size: 10px;
+    margin-top: 22vh;
+  }
+}
