--- a/src/components/Links.css
+++ b/src/components/Links.css
@@ -17,3 +17,15 @@
   padding: 3vh 0 3vh 0;
   background-color: #e8db7d;
 }
+
+@media (max-width: 767px) {
+  .linkBox {
+    width: 80vw;
+    font-size: 10px;
+    margin-top: 25vh;
+  }
+
+  .titleContainer {
+    width: 100vw;
+  }
+}
