--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -1,2 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
