--- a/src/components/PublisherList.css
+++ b/src/components/PublisherList.css
@@ -12,7 +12,7 @@
   margin: 25px;
   padding-top: 5vh;
   padding-bottom: 5vh;
-  background-color: #a31621;
+  background-color: #7b141b;
   opacity: 0.9;
 }
 
@@ -20,7 +20,8 @@
   text-align: center;
   color: #e2e2e2;
   text-decoration: none;
-  font-family: "Staatliches", cursive;
+  font-family: "Bebas Neue", cursive;
+  font-size: 22px;
 }
 
 .comicLink {
