--- a/src/components/PublisherList.css
+++ b/src/components/PublisherList.css
@@ -30,10 +30,14 @@
 
 @media (max-width: 767px) {
   .comicTitle {
-    font-size: 10px;
+    font-size: 12px;
   }
 
   .comicList {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .comicItem {
+    border: 4px ridge #0d00a4;
   }
 }
