--- a/src/components/Titles.css
+++ b/src/components/Titles.css
@@ -4,6 +4,7 @@
   justify-items: center;
   margin: 25px 0 25px 0;
   padding: 15px;
+  border: 12px double #7b141b;
 }
 
 .titleContainer {
@@ -17,6 +18,7 @@
   .titleCard {
     width: 80vw;
     font-size: 10px;
+    border: 8px ridge #7b141b;
   }
 
   .titleContainer {
