--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   background-image: url(./assets/background.jpeg);
   background-size: cover;
   background-position: center;
-  align-items: ;
+  font-family: "Asap", sans-serif;
 }
 
 #title {
