--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,10 +1,10 @@
 .addForm {
   display: grid;
-  grid-template-rows: 5vh 5vh 5vh 5vh 5vh 5vh 5vh 5vh 5vh;
+  grid-template-rows: 5vh 5vh 5vh 5vh 5vh 5vh 5vh 5vh 5vh 5vh;
   grid-template-columns: 100vw;
   justify-content: center;
   align-content: space-around;
-  height: 70vh;
+  height: 80vh;
 }
 
 #publisher {
@@ -56,7 +56,8 @@
   width: 75px;
   height: 30px;
   justify-self: center;
-  grid-row: 9/ 10;
+  grid-row: 10/ 11;
   background-color: #0d00a4;
   color: #e2e2e2;
+  outline: none;
 }
