--- a/src/components/ReleaseCalendar.css
+++ b/src/components/ReleaseCalendar.css
@@ -1,7 +1,8 @@
 .monthDiv {
   display: grid;
-  justify-content: center;
   grid-template-columns: 100vw;
+  justify-items: center;
+  align-content: center;
 }
 
 #showDay {
@@ -20,6 +21,7 @@
 
 .calendarTitle {
   background-color: #e2e2e2;
+  width: 50vw;
 }
 
 @media (max-width: 768px) {
